# Atttendance-App

./: README.md  pyproject.toml
.github/workflows/: ci.yml
attendance_sync/: hooks.py  utils.py
attendance_sync/attendance_sync/: Attendance.py
attendance_sync/attendance_sync/doctype/device_configuration/: device_configuration.js  device_configuration.json  device_configuration.py  test_device_configuration.py  test_hikvision_configuration.py
