[project]
name = "attendance_sync"
authors = [
    { name = "GLASCUTR Limited", email = "info@glascutr.com"}
]
description = "A robust integration system that connects attendance devices to automate log fetching, employee mapping, and real-time attendance updates. It ensures accuracy, prevents duplicates, and streamlines HR attendance processes."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
